--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,13 @@ repositories {
 }
 
 dependencies {
+	def immutablesVersion = "2.10.1"
+	annotationProcessor "org.immutables:value:$immutablesVersion"
+	compileOnly "org.immutables:value:$immutablesVersion"
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+	implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
