Well something got generated lol

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	def immutablesVersion = "2.10.1"
 	annotationProcessor "org.immutables:value:$immutablesVersion"
 	compileOnly "org.immutables:value:$immutablesVersion"
+	implementation 'com.kennycason:kumo-core:1.28'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
